# nedo-heroes

./: CMakeLists.txt
img/Heroes/Cowboy/: script.sh
img/Heroes/Cowboy/MoveEast/: script.sh
img/Heroes/Cowboy/MoveWest/: script.sh
include/: AbstractCore.h  AbstractCoreImpl.hpp  Application.h  BetweenTurnsState.h  Commands.h  GUI.h  Game.h  GameObjectsCore.h  GameState.h  Hero.h  LandscapeObject.h  Logger.hpp  MainGamePanel.h  Panel.h  Player.h  ResourceHolder.hpp  SceneNode.h  States.h  Textures.h  Textures.inc  Town.h  Window.h  World.h
maps/: gen.py  map1.conf
src/: AbstractCore.cpp  Application.cpp  BetweenTurnsState.cpp  Button.cpp  CMakeLists.txt  Game.cpp  GameObjectsCore.cpp  GameState.cpp  Hero.cpp  LandscapeObject.cpp  MainGamePanel.cpp  Panel.cpp  Path.cpp  Player.cpp  SceneNode.cpp  States.cpp  Town.cpp  Window.cpp  World.cpp  main.cpp
